# IPHYRE

./: .gitignore  IPHYREEnv.py  README.md  action_list.npy  collect_initial_data_all.sh  collect_while_play_all.sh  constraints.py  data.json  demo.html  evaluate_online_RL.py  game_paras.py  gpt.py  index.html  iphyre_data.py  main.py  main_situ.py  play.py  play_all.sh  requirements.txt  run_game.py  solutions.py  train.py  train_SL.py  train_offline_RL.py  train_online_RL.py  try.py  utils.py
RL_framework/: rollout.py  train.py
RL_framework/policies/: __init__.py
agents/: aggregation.py  fusion_models.py  plan_ahead_models.py  random_agent.py  train.py
agents/config/: A2C_config.py  DDPG_config.py  DQN_config.py
agents/plan_ahead/: fusion_models.py
agents/plan_in_situ/: DDPG.py  DQN.py  a2c.py  random_agent.py
agents/world_model/: __init__.py  controller.py  mdrnn.py  vae.py
config/: A2C_config.py  DQN_config.py
dataset/: IPHYRE.py  dataload.py  generate_action_time.py  iphyre.py
games/: game_paras.py  simulator.py  solutions.py
iphyre/: __init__.py  simulator.py  utils.py
package/: LICENSE  README.md  pyproject.toml
package/src/iphyre/: __init__.py  games.py  simulator.py  utils.py
package/src/iphyre.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: collect_data_all.sh  collect_initial_all.py  collect_initial_data_all.sh  collect_play_all.py  collect_seq_all.py  collect_while_play_all.sh  dowload_dataset.sh  generate_actions_all.py  generate_collect.py  play_all.py  play_all.sh  train_all.sh
src/: README.md  setup.py
(+11 files in other folders)
